Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -7,7 +7,7 @@ This chapter begins with a historical overview of neutrino discoveries in \Secti
 
 The neutrino was first postulated in 1930 by Pauli in an attempt to explain the continuous energy spectrum observed for the electrons from beta decay experiments~\cite{Pauli_letter}. At the time it was assumed that along with the nucleus, an electron was the only other product from beta decay. That is, beta decay was thought to be a two-body decay of the form,
 \begin{equation}
-    {^A_Z}X \longrightarrow {^{\ \ A}_{Z+1}}Y + e^-,
+    {^A_Z}\text{X} \longrightarrow {^{\ \ A}_{Z+1}}\text{Y} + e^-,
 \end{equation}
 where \textit{X} and \textit{Y} are the elements undergoing the decay and the resultant element respectively. The continuous energy spectrum of the electron was puzzling as it was expected that the electron would always have a fixed kinetic energy and observing electrons with a range of energies appeared to violate energy conservation. Pauli theorised that in addition to the electron, a neutral particle was also emitted in beta decay and that the sum of the energy of the electron and this neutral particle would be constant \cite{Pauli_letter}.
 
@@ -154,7 +154,7 @@ By defining $\overline{\psi} \equiv \psi^\dag \gamma^0$ and noting that $P_{(L,R
 \end{equation}
 It should be noted that for massless particles, helicity is Lorentz invariant and becomes identical to chirality \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
 
-The weak force has two associated types of interaction: \gls{cc} interactions which are mediated by the charged W boson and \gls{nc} interactions which are mediated by the neutral Z boson. The defining difference is that for \gls{cc} interactions current flows between the interacting fermions (i.e. charge is exchanged), whereas for \gls{nc} interactions, the total flow of charge between the interacting fermions is zero. The weak component of the \gls{sm} Lagrangian is therefore comprised of two terms, one representing \gls{cc} and one representing \gls{nc}. The \gls{cc} current, $j^{CC}_{weak}$,  and \gls{nc} current, $j^{NC}_{weak}$, components of each of these terms may be expressed as, 
+The weak force has two associated types of interaction: \gls{cc} interactions which are mediated by the charged W boson and \gls{nc} interactions which are mediated by the neutral Z boson. The defining difference is that for \gls{cc} interactions current flows between the interacting fermions (i.e. charge is exchanged), whereas for \gls{nc} interactions, the total flow of charge between the interacting fermions is zero. The weak component of the \gls{sm} Lagrangian is therefore comprised of two terms, one representing \gls{cc} and one representing \gls{nc}. The \gls{cc} current, $j^{CC}_{weak}$,  and \gls{nc} current, $j^{\gls{nc}}_{weak}$, components of each of these terms may be expressed as, 
 \begin{equation}\label{eqn:weak current}
 \begin{split}
     j^{CC}_{weak} &= \frac{g}{\sqrt{2}}\overline{\psi}\gamma^{\mu}P_L\psi, \\
@@ -308,7 +308,7 @@ Instead of scattering off the nucleus, neutrinos may also scatter off the electr
 \begin{equation}
     \nu_l + \electron \rightarrow \nu_l + \electron.
 \end{equation}
-This is an elastic process that has indistinguishable CC and NC components for \nue interactions, whereas only a NC component is allowed for \numu and \nutau \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
+This is an elastic process that has indistinguishable \gls{cc} and \gls{nc} components for \nue interactions, whereas only a \gls{nc} component is allowed for \numu and \nutau \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
 
 %https://feynman.aivazis.com/
 \newpage
@@ -598,7 +598,7 @@ This is the idea that underpins the \gls{katrin} which uses tritium as the nucle
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap2/Schematics-of-the-Katrin-experiment.png}
+    \includegraphics[width = \hugefigwidth]{figures-chap2/Schematics-of-the-Katrin-experiment.png}
     \caption[Schematic of the \gls{katrin} detector.]{Schematic of the \gls{katrin} detector \cite{KATRIN_detector_figure}.}
     \label{fig:katrin_detector}
 \end{figure}
@@ -851,7 +851,7 @@ The allowed regions and best fit points from both \gls{reno} and Daya Bay are sh
 
 \begin{figure}
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap2/theta_13.png}
+    \includegraphics[width = \hugefigwidth]{figures-chap2/theta_13.png}
     \caption[Allowed regions in $\sin^2{\theta_{13}}$ -- $\Delta m^2_{31}$ space from the \gls{reno} and Daya Bay experiments.]{Allowed regions from a global analysis in $\sin^2{\theta_{13}}$ -- $\Delta m^2_{31}$ space from the \gls{reno} and Daya Bay experiments for the normal hierarchy (left) and the inverted hierarchy (right). The associated best fit points are also shown
     \cite{2020_global_reassessment_of_the_neutrino_oscillation_picture}.}
     \label{fig:Reno_Daya_Bay}
@@ -867,7 +867,7 @@ The IceCube Deep Core experiment, which consists of 5160 \glspl{pmt} located $\s
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap2/theta_23_2.png}   
+    \includegraphics[width = \hugefigwidth]{figures-chap2/theta_23_2.png}   
     \caption[Allowed regions in $\sin^2{\theta_{23}}$ -- $\Delta m^2_{31}$ space from the \gls{sk} and IceCube DeepCore experiments.]{Allowed regions from a global analysis in $\sin^2{\theta_{23}}$ -- $\Delta m^2_{31}$ space from the \gls{sk} and IceCube experiments for the normal hierarchy (left) and the inverted hierarchy (right). The associated best fit points are also shown \cite{2020_global_reassessment_of_the_neutrino_oscillation_picture}.}
     \label{fig:sk_icecube}
 \end{figure}
@@ -876,7 +876,7 @@ The \gls{t2k} experiment observed events from a beam exposure of $1.97 \times 10
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap2/theta_23_1.png}   
+    \includegraphics[width = \hugefigwidth]{figures-chap2/theta_23_1.png}   
     \caption[Allowed regions in $\sin^2{\theta_{23}}$ -- $\Delta m^2_{31}$ space from the \gls{t2k}, NO$\nu$A, \gls{minos} and K2K experiments.]{Allowed regions from a global analysis in $\sin^2{\theta_{23}}$ -- $\Delta m^2_{31}$ space from the \gls{t2k}, NO$\nu$A, \gls{minos} and K2K experiments for the normal hierarchy (left) and the inverted hierarchy (right). The associated best fit points are also shown
     \cite{2020_global_reassessment_of_the_neutrino_oscillation_picture}.}
     \label{fig:t2k_nova_minos_k2k}
@@ -884,7 +884,7 @@ The \gls{t2k} experiment observed events from a beam exposure of $1.97 \times 10
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap2/CP.png}
+    \includegraphics[width = \hugefigwidth]{figures-chap2/CP.png}
     \caption[Allowed regions in $\sin^2{\theta_{13}}$ -- $\delta_{CP}$ space from the \gls{t2k} and NO$\nu$A experiments.]{Allowed regions from a global analysis in $\sin^2{\theta_{13}}$ -- $\delta_{CP}$ space from the \gls{t2k} and NO$\nu$A experiments for the normal hierarchy (left) and the inverted hierarchy (right). The associated best fit points are also shown
     \cite{2020_global_reassessment_of_the_neutrino_oscillation_picture}.}
     \label{fig:t2k_nova_CP}
@@ -964,7 +964,7 @@ The \nuebar appearance signal was identified from the $\nuebar + p \rightarrow \
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap2/LSND_excess.png}
+    \includegraphics[width = \mediumfigwidth]{figures-chap2/LSND_excess.png}
     \caption[LSND excess.]{The \gls{lsnd} excess as a function of the neutrino L/E value. Events require a positron in the energy range $20 < E < 60$ MeV and a likelihood ratio of > 10 that the associated gamma was correlated (i.e. $\frac{\mathcal{L}_{\gamma}(correlated)}{\mathcal{L}_{\gamma}(accidental)} > 10$) \cite{LSND_excess}.}
     \label{fig:LSND excess}
 \end{figure}
@@ -973,7 +973,7 @@ The \nuebar appearance signal was identified from the $\nuebar + p \rightarrow \
 \paragraph{MiniBooNE}
 \gls{miniboone} collected data from the \gls{bnb} operating in both neutrino and anti-neutrino mode from 2002--2017. The \gls{bnb} is described in detail in \SectionRef{sec:BNB}. The detector was a sphere 12.2 m in diameter containing 818 tonnes of mineral oil. Charged particles in the oil would result in both Cherenkov and scintillation light that would be detected by 1520 \glspl{pmt} that surrounded the detector. The baseline from the \gls{bnb} source to \gls{miniboone} was 541 m.
 
-Similar to \gls{lsnd}, \gls{miniboone} was searching for $\overset{(-)}{\nu}_{\!\!e}$ appearance from a predominantly $\overset{(-)}{\nu}_{\!\!\mu}$ beam. In neutrino mode, \gls{miniboone} observed an excess of 381.2\pm85.2 \gls{ccqe} events from an exposure of $12.84 \times 10^{20}$ \gls{pot} which corresponds to a 4.5$\sigma$ excess. This is shown in \FigureRef{fig:MiniBooNE excess}. Combining this with the anti-neutrino data from an exposure of $11.27 \times 10^{20}$ \gls{pot}, an excess of 460.5\pm99.0 \gls{ccqe} events (4.7$\sigma$) were observed. The excess of (anti-)neutrinos considered were in the energy range of $200 < E_\nu < 1250$ MeV. The minimum energy of 200 MeV was chosen due to requiring a visible Cherenkov ring from a muon as a result of \numu \gls{ccqe} interactions which were used to constrain \nue events, whereas the maximum value of 1250 MeV was chosen to give a small value of L/E. Some of the most substantial backgrounds are due to $\overset{(-)}{\nu}_{\!\!e}$ events resulting from muon and kaon decays as well as NC $\pi^0$ and NC $\gamma$ events which mimic signal events. The intrinsic $\overset{(-)}{\nu}_{\!\!e}$'s are constrained by a joint fit of $\overset{(-)}{\nu}_{\!\!\mu}$ and $\overset{(-)}{\nu}_{\!\!e}$ assuming that $\overset{(-)}{\nu}_{\!\!\mu}$ disappearance is negligible, whilst the $\overset{(-)}{\nu}_{\!\!e}$'s from kaon decays are constrained by results from \gls{sciboone} and fits to kaon production data. Events from NC interactions are constrined using \gls{microboone} data. 
+Similar to \gls{lsnd}, \gls{miniboone} was searching for $\overset{(-)}{\nu}_{\!\!e}$ appearance from a predominantly $\overset{(-)}{\nu}_{\!\!\mu}$ beam. In neutrino mode, \gls{miniboone} observed an excess of 381.2\pm85.2 \gls{ccqe} events from an exposure of $12.84 \times 10^{20}$ \gls{pot} which corresponds to a 4.5$\sigma$ excess. This is shown in \FigureRef{fig:MiniBooNE excess}. Combining this with the anti-neutrino data from an exposure of $11.27 \times 10^{20}$ \gls{pot}, an excess of 460.5\pm99.0 \gls{ccqe} events (4.7$\sigma$) were observed. The excess of (anti-)neutrinos considered were in the energy range of $200 < E_\nu < 1250$ MeV. The minimum energy of 200 MeV was chosen due to requiring a visible Cherenkov ring from a muon as a result of \numu \gls{ccqe} interactions which were used to constrain \nue events, whereas the maximum value of 1250 MeV was chosen to give a small value of L/E. Some of the most substantial backgrounds are due to $\overset{(-)}{\nu}_{\!\!e}$ events resulting from muon and kaon decays as well as \gls{nc} $\pi^0$ and \gls{nc} $\gamma$ events which mimic signal events. The intrinsic $\overset{(-)}{\nu}_{\!\!e}$'s are constrained by a joint fit of $\overset{(-)}{\nu}_{\!\!\mu}$ and $\overset{(-)}{\nu}_{\!\!e}$ assuming that $\overset{(-)}{\nu}_{\!\!\mu}$ disappearance is negligible, whilst the $\overset{(-)}{\nu}_{\!\!e}$'s from kaon decays are constrained by results from \gls{sciboone} and fits to kaon production data. Events from \gls{nc} interactions are constrined using \gls{microboone} data. 
 
 A two neutrino model was assumed so that a comparison with \gls{lsnd} data can be made, however, this results in the appearance and disappearance data not being compatible with one another. This may be resolved by assuming a different model to the 3+1 neutrino framework. The results are consistent with those seen by \gls{lsnd} and again point to the existence of additional neutrino flavours beyond the three predicted by the \gls{sm} \cite{MiniBooNE_excess}. 
 \begin{figure}[h!]
@@ -1005,7 +1005,7 @@ The \gls{karmen} experiment is associated with the ISIS neutron source which pro
 
 After applying the selection criteria, to the data collected between February 1997 to March 2001, 15 \nuebar candidate events were observed with the total background expectation being $(15.8\pm 0.5)$ events. Assuming that mixing is maximal and that $\Delta m^2 \geq 100$ eV$^2$ an oscillation signal of $(2913 \pm 269)$ events would be expected. The selection criteria include considering the timing information of the ISIS beam meaning the \positron must be detected within 0.6 and 10.6 $\mu$s of the beam window, the neutron capture must occur with a time delay between 5 and 300 $\mu$s, the \positron must deposit a minimum of 16 MeV of visible energy which removes neutral current contributions and the neutron capture event must have an energy below 8 MeV \cite{Upper_limits_for_neutrino_oscillations_numubar_to_nuebar_from_muon_decay_at_rest}.
 
-\nue's are detected by CC interactions with carbon-12 via
+\nue's are detected by \gls{cc} interactions with carbon-12 via
 \begin{equation}
     \nue + {^{12}\text{C}} \longrightarrow {^{12}\text{N}} + \electron \\
     {^{12}\text{N}} \longrightarrow {^{12}\text{C}} + \positron + \nue,
@@ -1024,19 +1024,19 @@ No evidence of oscillations was found from either channel, with the number of ev
 
 \paragraph{\gls{minos}}
 
-The \gls{minos} experiment consisted of a near detector at a baseline of 1.04 km and a far detector at a baseline of 735 km and utilised the \gls{numi} beam. The \gls{numi} beam is muon-neutrino dominated and has a peak energy of 3 GeV. Therefore, \gls{minos} focused on measuring \numu CC and NC interactions from an exposure of $10.56 \times 10^20$ \gls{pot}. Both detectors consist of steel scintillator calorimeters that measure the charge and momentum of muons by the use of magnetic field. 
+The \gls{minos} experiment consisted of a near detector at a baseline of 1.04 km and a far detector at a baseline of 735 km and utilised the \gls{numi} beam. The \gls{numi} beam is muon-neutrino dominated and has a peak energy of 3 GeV. Therefore, \gls{minos} focused on measuring \numu \gls{cc} and \gls{nc} interactions from an exposure of $10.56 \times 10^20$ \gls{pot}. Both detectors consist of steel scintillator calorimeters that measure the charge and momentum of muons by the use of magnetic field. 
 
-The NC sample is selected by requiring that activity from interactions is contained on fewer than 47 steel scintillator planes as well as requiring the reconstructed track (if present) to not extend more than 5 planes beyond the hadronic shower. Additional criteria are applied to account for the reconstruction not being able to resolve coincident events. Only events that are rejected by the NC selection are considered for the CC selection. The CC sample requires a contained interaction with a single outgoing muon track and the possible presence of hadronic shower. 
+The \gls{nc} sample is selected by requiring that activity from interactions is contained on fewer than 47 steel scintillator planes as well as requiring the reconstructed track (if present) to not extend more than 5 planes beyond the hadronic shower. Additional criteria are applied to account for the reconstruction not being able to resolve coincident events. Only events that are rejected by the \gls{nc} selection are considered for the \gls{cc} selection. The \gls{cc} sample requires a contained interaction with a single outgoing muon track and the possible presence of hadronic shower. 
 
 For the oscillation analysis, \gls{minos} assumed a (3+1) framework and used the full oscillation probabilities in vacuum (it was determined that including the matter effect had a negligible effect). Based on global data, $\sin^2{\theta_{12}}$ and $\Delta m^2_{41}$ were set to 0.307 and $7.54\times10^{-5}$ eV$^2$ respectively. $\sin^2{\theta_{13}}$ was set to 0.022 which was based on data from reactor experiments and $\theta_{13}$ was set to 0 since it had negligible impact on the analysis. The analysis also has negligible sensitivity to $\delta_{13,14,24}$, so all three were also set to 0. Parameters $\theta_{23}$, $\theta_{24}$, $\theta_{34}$, $\Delta m^2_{32}$ and $\Delta m^2_{41}$ are what are fit for in the analysis. 
 
-Since \gls{minos} is sensitive to $10^{-3} \lesssim \Delta m^2 \lesssim 10^2$ eV$^2$, sterile oscillations may occur in both detectors. Due to this, the ratio of the energy spectrum in the far detector to the near detector are considered instead of using the near detector to predict the spectrum of the far detector. Both the CC and NC spectra are shown on the left of \FigureRef{fig:minos_spectra_contour} and show good agreement with a three neutrino model. Three flavour oscilations are consistent with the data at the 54.7\% confidence level with no indication of the presence of sterile neutrinos. Exclusion contours are produced in ($\sin^2{\theta_{24}}$, $\Delta m^2_{41}$) space where parameters $\theta_{23}$, $\theta_{34}$ and $\Delta m^2_{32}$ are varied to minimise the fit statistic. The exclusion contours from \gls{minos} data are shown on the right of \FigureRef{fig:minos_spectra_contour} at the 90\% and 95\% confidence level along with external limits. 
+Since \gls{minos} is sensitive to $10^{-3} \lesssim \Delta m^2 \lesssim 10^2$ eV$^2$, sterile oscillations may occur in both detectors. Due to this, the ratio of the energy spectrum in the far detector to the near detector are considered instead of using the near detector to predict the spectrum of the far detector. Both the \gls{cc} and \gls{nc} spectra are shown on the left of \FigureRef{fig:minos_spectra_contour} and show good agreement with a three neutrino model. Three flavour oscillations are consistent with the data at the 54.7\% confidence level with no indication of the presence of sterile neutrinos. Exclusion contours are produced in ($\sin^2{\theta_{24}}$, $\Delta m^2_{41}$) space where parameters $\theta_{23}$, $\theta_{34}$ and $\Delta m^2_{32}$ are varied to minimise the fit statistic. The exclusion contours from \gls{minos} data are shown on the right of \FigureRef{fig:minos_spectra_contour} at the 90\% and 95\% confidence level along with external limits. 
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \smallfigwidth]{figures-chap2/minos_spectra.png}
     \includegraphics[width = \smallfigwidth]{figures-chap2/minos_contour.png}
-    \caption[Ratio of energy spectra in the far and near detector of \gls{minos} plus exclusion contours ($\sin^2{\theta_{24}}$, $\Delta m^2_{41}$) space.]{Left: The ratio of energy spectra from the far detector to the near detector of \gls{minos} for both CC and NC samples. Right: Exclusion contours from \gls{minos} at the 90\% and 95\% confidence level along with external limits \cite{MINOS}.}
+    \caption[Ratio of energy spectra in the far and near detector of \gls{minos} plus exclusion contours ($\sin^2{\theta_{24}}$, $\Delta m^2_{41}$) space.]{Left: The ratio of energy spectra from the far detector to the near detector of \gls{minos} for both \gls{cc} and \gls{nc} samples. Right: Exclusion contours from \gls{minos} at the 90\% and 95\% confidence level along with external limits \cite{MINOS}.}
     \label{fig:minos_spectra_contour}
 \end{figure}
 
@@ -1064,6 +1064,7 @@ From its second data collection period, \gls{katrin} has analysed $3.76 \times 1
     \label{fig:katrin_exclusion_contour}
 \end{figure}
 
+\newpage
 \paragraph{\gls{microboone}}
 The \gls{microboone} experiment was designed to investigate the low energy excess of events observed by the \gls{miniboone} collaboration. A detailed description of the \gls{microboone} detector can be found in \SectionRef{sec:MicroBooNE}. \gls{microboone} analysed data from the \gls{bnb} running in neutrino mode between February 2016 and July 2018 which corresponds to an exposure $\sim 7 \times 10^{20}$ \gls{pot}. A single $\gamma$ analysis along with three separate single \electron from \nue interaction analyses were performed, each classified by the event topology and reconstruction method namely, 
 \begin{itemize}
@@ -1073,9 +1074,9 @@ The \gls{microboone} experiment was designed to investigate the low energy exces
     \item $1\electron X$ inclusive scattering final state using Wire-Cell to perform the reconstruction.
 \end{itemize}
 
-The dominant production of single photon events (with no charged leptons or pions in the final state) at \gls{bnb} energies is via the neutrino induced NC $\Delta(1232) \rightarrow N\gamma$ decay, where \textit{N} represents either a proton or neutron. The analysis searches for a single photon shower with either a single visible proton or no other visible activity which are labelled $1\gamma1p$ and $1\gamma0p$ respectively. The Pandora reconstruction framework is used to classify events as either track or shower like events followed by identifying topologies with one shower and either zero or one associated track which define the two 1$\gamma$ selections. The analysis requires that candidate events are fully contained in the fiducial volume as well as applying cuts on the shower energy, properties of the track and shower opening angle which ensures sufficient reconstruction performance as well as rejecting some backgrounds. A number of \glspl{bdt} are then used on the remaining events to further reduce backgrounds from cosmic muons, $\pi^0$ decays, \nue CC events and \numu CC events \cite{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis}. 
+The production of single photon events (with no charged leptons or pions in the final state) at \gls{bnb} energies is dominated by the neutrino induced \gls{nc} $\Delta(1232) \rightarrow N\gamma$ decay, where \textit{N} represents either a proton or neutron. The analysis searches for a single photon shower with either a single visible proton or no other visible activity which are labelled $1\gamma1p$ and $1\gamma0p$ respectively. The Pandora reconstruction framework is used to classify events as either track or shower like events, followed by identifying topologies with one shower and either zero or one associated track which define the two 1$\gamma$ selections. The analysis requires that candidate events are fully contained in the fiducial volume as well as applying cuts on the shower energy, properties of the track and shower opening angle which ensures sufficient reconstruction performance as well as rejecting some backgrounds. A number of \glspl{bdt} are then used on the remaining events to further reduce backgrounds from cosmic muons, $\pi^0$ decays, \nue \gls{cc} events and \numu \gls{cc} events \cite{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis}. 
 
-The dominant background in this search is due to $\Delta \rightarrow N \pi^0$ where the pion decays into 2$\gamma$'s. If one of the $\gamma$'s is not reconstructed the event may mimic a single photon event. Possible reasons a photon may not be reconstructed include: the pion decay being very asymmetric leading to one low energy $\gamma$ that is not reconstructed, the emmission of the two $\gamma$'s is highly co-linear meaning the two $\gamma$'s are reconstructed as a single shower, one of the $\gamma$'s exits the \gls{tpc} before interacting or one of the $\gamma$'s may be poorly reconstructed (due to unresponsive wires). In order to constrain this background, a $2\gamma1p$ and $2\gamma0p$ are also selected \cite{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis}. 
+The dominant background in this search is due to $\Delta \rightarrow N \pi^0$ where the pion decays into two photons. If one of the photons is not reconstructed the event may mimic a single photon event. Possible reasons a photon may not be reconstructed include: the pion decay being very asymmetric leading to one low energy $\gamma$ that is not reconstructed, the emission of the two photons is highly co-linear meaning the two photons are reconstructed as a single shower, one of the photons exits the \gls{tpc} before interacting or one of the photons may be poorly reconstructed (due to unresponsive wires). In order to constrain this background, a $2\gamma1p$ and $2\gamma0p$ sample are also selected \cite{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis}. 
 
 For the $1\gamma1p$ sample, 16 events were observed with a background prediction of $20.5 \pm 3.6_{(syst)}$, whereas for the $1\gamma0p$ sample, 153 events were observed with a background prediction of $145.1 \pm 13.8_{(syst)}$. This is shown in \FigureRef{fig:microboone_1gamma} where the $1\gamma1p$ and $1\gamma0p$ analyses are shown in the left and right plots respectively. This analysis disfavours the single photon interpretation of the \gls{miniboone} low energy excess and instead favours the nominal prediction at the 94.8\% confidence level \cite{Search_for_Neutrino_Induced_Neutral_Current_Delta_Radiative_Decay_in_MicroBooNE_and_a_First_Test_of_the_MiniBooNE_Low_Energy_Excess_under_a_Single_Photon_Hypothesis}. 
 
@@ -1088,7 +1089,7 @@ For the $1\gamma1p$ sample, 16 events were observed with a background prediction
 \end{figure}
 
 
-The $1\electron1p$ \gls{ccqe} topology is expected to dominate at energies below 500 MeV. The analysis only considers fully contained \nue or \numu interactions with a lepton and proton in the final state. \gls{cnn} are used to distinguish track and shower like images as well as determining particle species. A \gls{bdt} uses kinematic and topological variables to produce a \gls{ccqe} event sample followed by a CNN to select the final candidates. The reconstructed neutrino energy range considered is 200--1200 MeV. 25 \nue candidate events were selected in this energy range which is in agreement with the background prediction of $29.0 \pm 1.9_{(sys)} \pm 5.4_{(stat)}$ events which is shown in \FigureRef{fig:microboone_machine_learning}. By mapping the low energy excess observed by \gls{miniboone} to \gls{microboone}, 11.6 \nue events are expected in addition to the background prediction which is not observed in this analysis \cite{Search_for_an_Excess_of_Electron_Neutrino_Interactions_in_MicroBooNE_Using_Multiple_Final_State_Topologies}\cite{Search_for_an_anomalous_excess_of_charged_current_quasi_elastic_nue_interactions_with_the_MicroBooNE_experiment_using_Deep_Learning_based_reconstruction}. 
+The $1\electron1p$ \gls{ccqe} topology is expected to dominate at energies below 500 MeV. The analysis only considers fully contained \nue or \numu interactions with a lepton and proton in the final state. \glspl{cnn} are used to distinguish track and shower like images as well as determining particle species. A \gls{bdt} uses kinematic and topological variables to produce a \gls{ccqe} event sample followed by a CNN to select the final candidates. The reconstructed neutrino energy range considered is 200--1200 MeV. 25 \nue candidate events were selected in this energy range which is in agreement with the background prediction of $29.0 \pm 1.9_{(sys)} \pm 5.4_{(stat)}$ events which is shown in \FigureRef{fig:microboone_machine_learning}. By mapping the low energy excess observed by \gls{miniboone} to \gls{microboone}, 11.6 \nue events are expected in addition to the background prediction which is not observed in this analysis \cite{Search_for_an_Excess_of_Electron_Neutrino_Interactions_in_MicroBooNE_Using_Multiple_Final_State_Topologies}\cite{Search_for_an_anomalous_excess_of_charged_current_quasi_elastic_nue_interactions_with_the_MicroBooNE_experiment_using_Deep_Learning_based_reconstruction}. 
 
 \begin{figure}[h!]
     \centering
@@ -1098,16 +1099,16 @@ The $1\electron1p$ \gls{ccqe} topology is expected to dominate at energies below
     \label{fig:microboone_machine_learning}
 \end{figure}
 
-The pionless final state analysis considers two sub-topologies: one with a single electron plus one or more visible protons and one with a single electron and no visible protons. Pandora is used in conjunction with other tools to reconstruct events and remove cosmic ray background events. Combining these two topologies is the exact signal event signature that \gls{miniboone} used. The reconstructed neutrino energy range considered is 10--2390 MeV. 64 \nue events were observed from the $1\electron Np0\pi$ channel which had a background prediction of $86.8 \pm 8.8_{(stat)} \pm 11.5_{(syst)}$ events. The $1\electron 0p0\pi$ channel instead observed 34 \nue events with a background prediction of $30.2 \pm 5.6_{(stat)} \pm 4.3_{(syst)}$ events which are shown in \FigureRef{fig:microboone_pionless}. The $1\electron Np0\pi$ result rejects the \gls{miniboone} low energy excess at a 97.9\% confidence level. The $1\electron 0p0\pi$ channel has an excess of events in the lowest energy region and does not fully exclude the hypothesis that \nue CC interactions caused the low energy excess, however, it is the least sensitive channel to the \gls{miniboone} excess \cite{Search_for_an_Excess_of_Electron_Neutrino_Interactions_in_MicroBooNE_Using_Multiple_Final_State_Topologies} \cite{Search_for_an_anomalous_excess_of_charged_current_nue_interactions_without_pions_in_the_final_state_with_the_MicroBooNE_experiment}. 
+The pionless final state analysis considers two sub-topologies: one with a single electron plus one or more visible protons and one with a single electron and no visible protons. Pandora is used in conjunction with other tools to reconstruct events and remove cosmic ray background events. Combining these two topologies is the exact signal event signature that \gls{miniboone} used. The reconstructed neutrino energy range considered is 10--2390 MeV. 64 \nue events were observed from the $1\electron Np0\pi$ channel which had a background prediction of $86.8 \pm 8.8_{(stat)} \pm 11.5_{(syst)}$ events. The $1\electron 0p0\pi$ channel instead observed 34 \nue events with a background prediction of $30.2 \pm 5.6_{(stat)} \pm 4.3_{(syst)}$ events which are shown in \FigureRef{fig:microboone_pionless}. The $1\electron Np0\pi$ result rejects the \gls{miniboone} low energy excess at a 97.9\% confidence level. The $1\electron 0p0\pi$ channel has an excess of events in the lowest energy region and does not fully exclude the hypothesis that \nue \gls{cc} interactions caused the low energy excess, however, it is the least sensitive channel to the \gls{miniboone} excess \cite{Search_for_an_Excess_of_Electron_Neutrino_Interactions_in_MicroBooNE_Using_Multiple_Final_State_Topologies} \cite{Search_for_an_anomalous_excess_of_charged_current_nue_interactions_without_pions_in_the_final_state_with_the_MicroBooNE_experiment}. 
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width =\largefigwidth]{figures-chap2/microboone_pionless.png}
+    \includegraphics[width =\hugefigwidth]{figures-chap2/microboone_pionless.png}
     \caption[Reconstructed neutrino energy from \gls{microboone} data using pionless final state topology for a \nue analysis.]{The reconstructed neutrino energy from a pionless final state topology (Left: $1\electron Np0\pi$, Right $1\electron 0p0\pi$) using Pandora for event reconstruction to analyse \gls{microboone} data \cite{Search_for_an_Excess_of_Electron_Neutrino_Interactions_in_MicroBooNE_Using_Multiple_Final_State_Topologies}.}
     \label{fig:microboone_pionless}
 \end{figure}
 
-The inclusive topology considers all hadronic final states and therefore has the largest statistics. Wire-Cell, wich creates 3D images from 1D wire position tomogophy is used for the reconstruction. Clustering algorithms and rejection tools are used on the images along with a deep neural network to identify the neutrino vertex and characterise the event. The analysis considers events in the 0 -- 2500 MeV neutrino energy range. Constraints coming from selected \numu CC events and both CC and NC events with a reconstructed $\pi^0$ are used to improve the sensitivity and reduce systematic uncertainties. Following the \nue analysis and applying these constraints, 338 candidate \nue CC events were observed which is a slight deficit with the predicted number of $(384.9 \pm 19.2_{(stat)} \pm 15.9_{(syst)})$ nominal events which is shown in \FigureRef{fig:microboone_inclusive}. An additional 37 events are predicted by applying the low energy excess observed by \gls{miniboone}.
+The inclusive topology considers all hadronic final states and therefore has the largest statistics. Wire-Cell, which creates 3D images from 1D wire position tomography is used for the reconstruction. Clustering algorithms and rejection tools are used on the images along with a deep neural network to identify the neutrino vertex and characterise the event. The analysis considers events in the 0 -- 2500 MeV neutrino energy range. Constraints coming from selected \numu \gls{cc} events and both \gls{cc} and \gls{nc} events with a reconstructed $\pi^0$ are used to improve the sensitivity and reduce systematic uncertainties. Following the \nue analysis and applying these constraints, 338 candidate \nue \gls{cc} events were observed which is a slight deficit with the predicted number of $(384.9 \pm 19.2_{(stat)} \pm 15.9_{(syst)})$ nominal events which is shown in \FigureRef{fig:microboone_inclusive}. An additional 37 events are predicted by applying the low energy excess observed by \gls{miniboone}.
 
 \begin{figure}[h!]
     \centering
@@ -1125,6 +1126,7 @@ Interpreting the most recent \gls{microboone} results in terms of the allowed re
     \label{fig:microboone_exclusion_contour}
 \end{figure}
 
+\newpage
 \paragraph{\gls{stereo}}
 The \gls{stereo} experiment is situated a few metres from the Institut Laue–Langevin research reactor in Grenoble. The detector consists of 6 cells filled with 1.8 m$^3$ of gadolinium doped liquid scintillator which acts as the target and measures the antineutrino energy spectrum as a result of the fission of uranium-235. \glspl{pmt} located at the top of each cell are used to detect the scintillation light. A water Cherenkov detector surrounds the cells which is used to identify cosmic muons which are passing through the detector. The 6 cells are positioned in a line along the axis of the reactor meaning each cell is at a slightly different baseline from the reactor (the baseline ranges from around 9 to 11 metres). 
 
@@ -1134,13 +1136,13 @@ The independent spectra from each of the 6 cells was compared with a given hypot
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap2/stereo.png}
+    \includegraphics[width = \mediumfigwidth]{figures-chap2/stereo.png}
     \caption[\gls{stereo} exclusion sensitivity at the 95\% confidence level.]{The exclusion contour and exclusion sensitivity at the 95\% confidence level using both the Feldman-Cousins approach and the Gaussian Confidence Level method. The reactor anti-neutrino anomaly allowed region and best fit point are also shown \cite{STEREO}.}
     \label{fig:stereo_exclusion_contour}
 \end{figure}
 
+\newpage
 \paragraph{Global Analysis}
-
 A global analysis may be performed to encompass experimental data from a number of experiments into a single result. The \gls{lsnd} and \gls{miniboone} experiments push the results away from the \gls{sm} and towards a (3+1) model, however, the mixing angles required to explain the \gls{lsnd} and \gls{miniboone} excess are in tension with \numu disappearance data. The different allowed regions from a (3+1) model as well the combined region are shown on the left of \FigureRef{fig:allowed_exclusion_region_tension} with large portions of the allowed regions not being excluded by appearance data. The combined allowed region along with the exclusion region from disappearance experiments are shown on the right of \FigureRef{fig:allowed_exclusion_region_tension} with the entire allowed region being excluded by the disappearance contour. The level of tension between the allowed region and disappearance data has been quantified in terms of a \textit{p}-value of $3.7 \times 10^{-7}$, which strongly disfavours the (3+1) model. A caveat in the calculation of the \textit{p}-value is that the global fits have assumed that Wilks' theorem applies, however, it is not entirely clear if this is true for neutrino experiments \cite{wilks_theorem}\cite{snowmass_2021}. 
 
 \begin{figure}
