--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -5,7 +5,7 @@
 
 \begin{figure}
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap3/SBN_program.jpg}
+    \includegraphics[width = \hugefigwidth]{figures-chap3/SBN_program.jpg}
     \caption[SBN map.]{A view of the Fermilab complex highlighting the position of the \gls{sbn} detectors \cite{SBN_paper}.}
     \label{fig:sbn_complex}
 \end{figure}
@@ -34,7 +34,7 @@ The general design of a single chamber \gls{lartpc} is shown in \FigureRef{fig:l
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width =\largefigwidth]{figures-chap3/Operational-principle-of-the-MicroBooNE-LArTPC.png}
+    \includegraphics[width =\hugefigwidth]{figures-chap3/Operational-principle-of-the-MicroBooNE-LArTPC.png}
     \caption[Schematic of LArTPC detector.]{A schematic of the operating principle of a \gls{lartpc} detector. A neutrino interacts in the argon producing secondary particles which ionise the argon atoms as they travel across the \gls{tpc}. The electric field causes the ionisation electrons to drift towards the wire planes where their energy deposits are recorded. \cite{Design_and_Construction_of_the_MicroBooNE_Detector}}
     \label{fig:lartpc}
 \end{figure}
@@ -227,7 +227,7 @@ operating 2015. The main goal was to investigate the low energy excess of events
 
 The second phase of the program focuses on the \gls{sbnd} and \gls{icarus} detectors which act as the near and far detector respectively. The \gls{icarus} detector began data taking in 2021, whilst \gls{sbnd} is still under construction. It is expected that liquid argon filling may begin in \gls{sbnd} by early summer of 2023 and that data taking can start at the beginning of 2024. The \gls{bnb} is expected to operate until a long shutdown period which is due to start at the beginning of 2027. From 2024 to 2027, the \gls{bnb} anticipates an exposure of $(10-18) \times 10^{20}$ \gls{pot}, which is up to $\sim3$ times the predicted \gls{pot} used in the \gls{sbn} proposal \cite{sbnd_pot}.
 
-The close proximity of \gls{sbnd} to the \gls{bnb} means an unprecedented number of neutrino-argon events will be observed which is expected to be of the order 2 million events a year, with 50,000 of them being \nue CC events which is sufficient to investigate multiple exclusive channels in addition to the inclusive ones \cite{sbnd_pot}. Joint fits between \gls{sbnd} and \gls{icarus} will be performed in order to exploit the best sensitivity of the \gls{sbn} program. \gls{microboone} data may also be included to produce a three detector fit as is shown in \ChapterRef{chap:VALOR}. 
+The close proximity of \gls{sbnd} to the \gls{bnb} means an unprecedented number of neutrino-argon events will be observed which is expected to be of the order 2 million events a year, with 50,000 of them being \nue \gls{cc} events which is sufficient to investigate multiple exclusive channels in addition to the inclusive ones \cite{sbnd_pot}. Joint fits between \gls{sbnd} and \gls{icarus} will be performed in order to exploit the best sensitivity of the \gls{sbn} program. \gls{microboone} data may also be included to produce a three detector fit as is shown in \ChapterRef{chap:VALOR}. 
 
 
 \subsection{SBND}\label{sec:SBND}
@@ -259,7 +259,7 @@ The \gls{pds} consists of a total of 24 \textit{boxes}, 12 of which will be moun
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap3/arapuca.png}
+    \includegraphics[width = \hugefigwidth]{figures-chap3/arapuca.png}
     \caption[ARAPUCA operating principle.]{The three possibilities for trapping light in an X-ARAPUCA. Left: The standard \gls{arapuca} design. Light is wavelength shifted in order to pass through the dichroic filter. Once passed the filter, it is wavelength shifted again so that may not exit through the filter again. The photons are reflected within the \gls{arapuca} until they are detected by the photo-sensor. Middle: an acrylic slab containing the inner wavelength shifter is placed in the X-ARAPUCA and the photo-sensor is attached to the slab. Light may become trapped within the slab by total internal reflection. Right: Incident light at a large angle may become trapped between the surface of the slab and the filter \cite{X-ARAPUCA}.}
     \label{fig:arapuca}
 \end{figure}
@@ -268,13 +268,13 @@ Another component of the \gls{pds} is covering each side of the \gls{cpa} with a
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap3/PDS_box.jpg}
-    \caption[Schematic of PDS box.]{Schematic of the \gls{pds} box showing the position of the 5 \glspl{pmt} and the 4 pairs of X-ARAPUCA'S. The central \gls{pmt} is left uncoated, whilst the 4 outer \glspl{pmt} are coated with \gls{tpb} \cite{LArTPC_review}.}
+    \includegraphics[width = \mediumfigwidth]{figures-chap3/PDS_box_2.jpg}
+    \caption[Image of PDS box.]{Image of a \gls{pds} box showing the position of the 5 \glspl{pmt} and the 4 pairs of X-ARAPUCA'S. The central \gls{pmt} is left uncoated, whilst the 4 outer \glspl{pmt} are coated with \gls{tpb}.} %\cite{LArTPC_review}.}
     \label{fig:pds_box}
 \end{figure}
 
+\newpage
 \subsection{MicroBooNE}\label{sec:MicroBooNE}
-
 The \gls{microboone} detector is located slightly upstream of its predecessor, \gls{miniboone}. The detectors are at 470 m and 541 m from the \gls{bnb} source respectively. The principal design goal of \gls{microboone} is to investigate the low energy excess of events observed by \gls{miniboone} and it began its operations in 2015 where it was initially used as a stand-alone detector before becoming part of the larger \gls{sbn} program \cite{microboone_detector}.
 
 \begin{figure}[h!]
@@ -300,7 +300,7 @@ The light collection system for \gls{icarus} is comprised of a series of 74 \gls
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap3/icarus.png}
+    \includegraphics[width = \hugefigwidth]{figures-chap3/icarus.png}
     \caption[ICARUS detector.]{Schematic of of the \gls{icarus} detector. The left image shows a cross-section of one of the two modules whereas the right image shows the whole detector with the two modules side by side \cite{ICARUS_image}.}
     \label{fig:icarus}
 \end{figure}
@@ -320,14 +320,14 @@ interaction medium and the same technology to detect interactions, the uncertain
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap3/osc_probability.png}
+    \includegraphics[width = \hugefigwidth]{figures-chap3/osc_probability.png}
     \caption[SBN oscillation probability.]{The oscillation parameters used in the two left and right plots are $(\sin^2{2\theta_{\mu e}}, ~\Delta m^2_{41}) = (0.015, ~0.3~\text{eV}^2), (0.002, ~1.5~\text{eV}^2)$ respectively. Top: The oscillation probability as a function of the baseline for the \nue appearance channel. A neutrino energy of 700 MeV is used in both cases. Bottom: The oscillation probability is shown as a function of neutrino energy in both the near and far detectors. Additionally, the ratio of the oscillation probabilities between the two detectors is also shown. \cite{SBN_paper}}
     \label{fig:osc_probability}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap3/SBN_proposal_sensitivity.png}
+    \includegraphics[width = \mediumfigwidth]{figures-chap3/SBN_proposal_sensitivity.png}
     \caption[\nue appearance \gls{sbn} proposal sensitivity.]{The expcted \nue appearance sensitivity from the \gls{sbn} program using inputs constructed at the time of the \gls{sbn} proposal. Limits from \gls{lsnd} and global best fit results are also shown \cite{SBN_Proposal}.}
     \label{fig:SBN_proposal_sensitivity}
 \end{figure}
@@ -423,7 +423,7 @@ Feynman diagrams of possible light dark matter, heavy sterile neutrino, dark neu
 \resizebox{\linewidth}{4cm}{  
 \begin{feynman}
     \dashed[showArrow=false, label=$\pi^0$]{28.00, 13.00}{30.00, 13.00}
-    \weak[label=$\gamma$, labelDistance=0.6]{30.00, 13.00}{32.00, 15.00}
+    \weak[label=$\gamma$, labelDistance=-0.4]{30.00, 13.00}{32.00, 15.00}
     \weak[label=$\gamma^*$, labelDistance=0.4]{30.00, 13.00}{32.00, 11.00}
     \fermion[label=$\chi$]{32.00, 11.00}{33.00, 12.00}
     \fermion[flip=true, label=$\overline{\chi}$, labelDistance=-0.5]{32.00, 11.00}{33.00, 10.00}
