--- a/chap4-Energy_Reco.tex
+++ b/chap4-Energy_Reco.tex
@@ -18,12 +18,12 @@ Reconstructed quantities are the main focus of this chapter and these are typica
     \item The lineage of the particles is identified and the particles are classified as either track- or shower-like.
 \end{enumerate}
 
-A number of different hit-finding algorithms exist, but the default one used by \gls{larsoft} is the \textit{GausHitFinder}. Once the algorithm has identified a waveform that peaks above some threshold (the threshold in \gls{sbnd} is 10 \gls{adc} counts), it attempts to fit one or more Gaussians to the waveform. For each peak, the centre and width are identified and these values are used to produce the associated Gaussian fit. For most cases, the \textit{GausHitFinder} works well, but two areas where it can struggle are resolving hits which are closely spaced and fitting a Gaussian to waveforms that are not well represented by a Gaussian. The latter tends to occur when charge is directed towards the wire planes (e.g. from a shower that was produced at a large angle to the beam line instead of being mostly forward going) which causes a long pulse train on but a few wires. This results in waveforms where the \gls{adc} count is above threshold for many ticks and is without a clear central peak. In such cases, the signal above threshold may be better represented by a series of N-Gaussians, however, this is still far from perfect and fitting a large number of peaks can appreciably increase computing time \cite{gaushitfinder}. \FigureRef{fig:fitted_waveforms} shows examples of some waveforms in blue along with the attempted Gaussian fit in red. The top plot shows an example waveform that is well represented by a Gaussian, whereas in the bottom plot there is a long waveform with a number of different peaks to which the \textit{GausHitFinder} has attempted to fit a single Gaussian. This long waveform is not representative of a single Gaussian and therefore the associated reconstructed charge will deviate significantly from the true value.
+A number of different hit-finding algorithms exist, but the default one used by \gls{larsoft} is the \textit{GausHitFinder}. Once the algorithm has identified a waveform that peaks above some threshold (the threshold in \gls{sbnd} is 10 \gls{adc} counts), it attempts to fit one or more Gaussians to the waveform. For each peak, the centre and width are identified and these values are used to produce the associated Gaussian fit. For most cases, the \textit{GausHitFinder} works well, but two areas where it can struggle are resolving hits which are closely spaced and fitting a Gaussian to waveforms that are not well represented by a Gaussian. The latter tends to occur when charge is directed towards the wire planes (e.g. from a shower that was produced at a large angle to the beam line instead of being mostly forward going) which causes a long pulse train on but a few wires. This results in waveforms where the \gls{adc} count is above threshold for many ticks and is without a clear central peak. In such cases, the signal above threshold may be better represented by a series of N-Gaussians, however, this is still far from perfect and fitting a large number of peaks can appreciably increase computing time \cite{gaushitfinder}. \FigureRef{fig:fitted_waveforms} shows examples of some waveforms in blue along with the attempted Gaussian fit in red. The top plot shows an example waveform that is well represented by a Gaussian, whereas in the bottom plot there is a waveform that is above threshold for many ticks with a number of different peaks to which the \textit{GausHitFinder} has attempted to fit a single Gaussian. This waveform is not representative of a single Gaussian and therefore the associated reconstructed charge will deviate significantly from the true value.
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = \largefigwidth]{figures-chap4/good_gauss_fit.png}
-    \includegraphics[width = \largefigwidth]{figures-chap4/bad_gauss_fit.png}
+    \includegraphics[width = \hugefigwidth]{figures-chap4/good_gauss_fit.png}
+    \includegraphics[width = \hugefigwidth]{figures-chap4/bad_gauss_fit.png}
     \caption[Example of a well and poorly fitted waveform.]{Waveforms (blue) that have been fitted with a Gaussian (red) from the \textit{GausHitFinder}. Top: an example of a waveform that is well represented by a Gaussian. Bottom: an example of a waveform that is not well represented by a Gaussian.}
     \label{fig:fitted_waveforms}
 \end{figure}
@@ -243,7 +243,7 @@ Since photons also produce \gls{em} showers, a \gls{bnb}-like $\gamma + \pi^+$ s
     \label{fig:true_vs_reco_photon_sample}
 \end{figure}
 
-\clearpage
+\newpage
 \subsection{Performance as a Function of Angle}
 
 From a \gls{bnb} neutrino sample, most of the showers are expected to be predominantly forward-going. A fraction of showers will however be directed at large angles to the beamline. As was mentioned in \SectionRef{sec:Event Production and Reconstruction}, showers directed towards the wire planes tend to produce waveforms which are not well represented by Gaussians. Since the \textit{GausHitFinder} has trouble applying a suitable fit to these cases, a degradation in the reconstruction performance is expected as a function of angle.
